assets/css/shared.css
/* ... */
  .home .intro a,
  .featured-projects a,
  .featured-projects a[href]:hover,
  .featured-projects a[href]:active,
  .featured-projects a[href]:focus {
    color: inherit;
  }
  .home .intro a,
  .featured-projects a {
    text-decoration: inherit;
    font-style: inherit;
    display: block;
    padding: 3em 1.5em;
    box-sizing: border-box;
    position: relative;
    z-index: 1;
  }
  @media (min-width: 50em) {
    .featured-projects a {
      padding-top: 10em; /* 88px / 22px */
      padding-bottom: 12em;
    }
  }
  @media (min-width: 70em) {
    .featured-projects a {
      padding-left: 4em; /* 50px / 22px */
      padding-right: 4em;
    }
  }

  .home .intro       a:before,
  .featured-projects a:before {
    /* @darken-image */
    content: "";
    background-color: rgba(0, 0, 0, 0.4);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
  }
  .home .intro       a:after,
  .featured-projects a:after {
    content: "";  
    background-image: linear-gradient(to bottom, transparent, rgba(7, 12, 13, 0.40)); /* @tungsten */
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
  }
  /* Position the content above the gradient */
  .home .intro       div,
  .featured-projects div {
    position: relative;
    z-index: 1;
  }

  .featured-projects h2 {
    font-family: inherit;
    font-weight: inherit;
    font-style: italic;

    /* @header-3 */
    font-size: 1.6363636364em; /* 36px / 22px */
    line-height: 1.2222222222; /* 44px / 36px */

    padding-bottom: 0.1527777778em; /* (44px / 36px) / 8 */
    margin: 0;
    text-decoration: underline;
  }
  .tangerine .featured-projects h2 {
    color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange .featured-projects h2 {
    color: rgb(249, 132, 12); /* @orange */
  }
  .purple .featured-projects h2 {
    color: rgb(168, 46, 255); /* @purple */
  }
  .blue .featured-projects h2 {
    color: rgb(0, 157, 255); /* @blue */
  }
  .teal .featured-projects h2 {
    color: rgb(0, 240, 200); /* @teal */
  }
  .green .featured-projects h2 {
    color: rgb(48, 217, 101); /* @green */
  }
  .yellow .featured-projects h2 {
    color: rgb(255, 214, 13); /* @yellow */
  }
  .red .featured-projects h2 {
    color: rgb(239, 20, 93); /* @red */
  }
  .featured-projects h2 span {
    color: white;
  }

  .featured-projects p {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
    margin-top: 0.375em;
    margin-bottom: 0;
    max-width: 26em;
  }

  .featured-projects dl {
    margin-top: 0;
    margin-bottom: 0;
  }
  .featured-projects dt {
    margin-top: 0;
  }
  .featured-projects dd {
    color: inherit;
  }

  .featured-projects .more {
    color: rgb(0, 240, 200); /* @teal */
    text-align: right;
    max-width: none;
    margin-top: 1.2222222222em;
    font-style: italic;
  }
  .featured-projects .more span {
    display: inline-block;
    border: 2px solid;
    width: 4.375em;
    line-height: 4.375em;
    border-radius: 50%;
    text-align: center;
    font-style: normal;
    margin-left: 1em;
    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
  }
  .featured-projects .more span svg {
    font-size: 0.75em;
    vertical-align: middle;
  }
  .featured-projects a:hover  .more span,
  .featured-projects a:active .more span,
  .featured-projects a:focus  .more span {
    background-color: white;
    border-color: white;
    color: rgb(41, 53, 56); /* @tin */
  }

  .tangerine .featured-projects .more {
    color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange .featured-projects .more {
    color: rgb(249, 132, 12); /* @orange */
  }
  .purple .featured-projects .more {
    color: rgb(168, 46, 255); /* @purple */
  }
  .blue .featured-projects .more {
    color: rgb(0, 157, 255); /* @blue */
  }
  .teal .featured-projects .more {
    color: rgb(0, 240, 200); /* @teal */
  }
  .green .featured-projects .more {
    color: rgb(48, 217, 101); /* @green */
  }
  .yellow .featured-projects .more {
    color: rgb(255, 214, 13); /* @yellow */
  }
  .red .featured-projects .more {
    color: rgb(239, 20, 93); /* @red */
  }

  /* TODO: Add other colors */
  .teal .featured-projects a:hover  .more span,
  .teal .featured-projects a:active .more span,
  .teal .featured-projects a:focus  .more span {
    background-color: rgb(0, 240, 200); /* @teal */
    border-color: transparent;
  }

  /* Two columns */
  @media (min-width: 50em) {
    .featured-projects .more {
      margin: 0;
      position: absolute;
      left: 75%;
      top: 0.19em;
      text-align: left;
      width: 25%;
    }
  }

  /* Three columns */
  @media (min-width: 70em) {
    .featured-projects dl,
    .featured-projects .more {
      margin: 0;
      position: absolute;
      top: 1.575em;
      left: 50%;
    }
    .featured-projects .more {
      left: 75%;
      top: 0.19em;
      text-align: left;
      width: 25%;
    }
  }



  /* =Home
  ----------------------------------------------- */
  main.home {
    padding-top: 0;
    margin-top: 0;
  }

  .home .intro h1 {
    margin-top: 0;
    text-align: center;
  }
  .home .intro p {
    max-width: 40em;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.5em;
    line-height: inherit;
    text-decoration: underline;
  }
  @media (min-width: 45em) {
    .home .intro p {
      padding-left: 3em;
      padding-right: 3em;
    }
  }
  .tangerine .home .intro p {
    color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange .home .intro p {
    color: rgb(249, 132, 12); /* @orange */
  }
  .purple .home .intro p {
    color: rgb(168, 46, 255); /* @purple */
  }
  .blue .home .intro p {
    color: rgb(0, 157, 255); /* @blue */
  }
  .teal .home .intro p {
    color: rgb(0, 240, 200); /* @teal */
  }
  .green .home .intro p {
    color: rgb(48, 217, 101); /* @green */
  }
/* ... */

